ADDED: Problems solved during Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.

--- a/Topics/Arguments/Theory/task.html
+++ b/Topics/Arguments/Theory/task.html
@@ -54,7 +54,7 @@ greet("Clementine", name="Rose")
 # Abdul tests the system
 # Yana manages the product
 # Mark develops design</code></pre> 
-  <p>This way, Python knows the names of the arguments that our function takes. We can ask to remind us of them using the built-in <code class="language-python">help()</code> function.</p> 
+  <p>This way, Python knows the names of the arguments that our function takes. We can ask Python to remind us about them using the built-in <code class="language-python">help()</code> function.</p> 
   <pre><code class="language-python">help(responsibility)
 # Help on function responsibility in module __main__:
 # responsibility(developer, tester, project_manager, designer)</code></pre> 
