--- a/Topics/Set/Memory test/task.html
+++ b/Topics/Set/Memory test/task.html
@@ -2,11 +2,11 @@
 <html>
  <head></head>
  <body>
-  <p>Today you are assisting in a psychological experiment. To test a short-term memory, a researcher gives a set of numbers to each volunteer and asks to repeat all of them in any order. Repeats are allowed in the answer, but not the numbers not mentioned earlier.</p> 
+  <p>Today you are assisting in a psychological experiment. To test short-term memory, a researcher gives a set of numbers to each volunteer and asks to repeat all of them. The order does not matter and repeats are allowed.</p> 
   <p>The input has been read into two variables for you.</p> 
-  <p>If the volunteer remembers the numbers correctly, print <strong>True</strong>, otherwise, you should output <strong>False</strong>.</p> 
-  <p><button class="btn-sm btn-outline-secondary" onclick="getElementById('hint-521').style.display='inline'"> Hint </button> </p>
-  <div id="hint-521" style="display:none;">
+  <p>If the volunteer remembers all numbers correctly, print <strong>True</strong>, otherwise, you should output <strong>False</strong>.</p> 
+  <p><button class="btn-sm btn-outline-secondary" onclick="getElementById('hint-479').style.display='inline'"> Hint </button> </p>
+  <div id="hint-479" style="display:none;">
    The comparison of two sets will return either 
    <strong>True</strong> or 
    <strong>False</strong>, so you don't have to use conditions like 
