--- a/Topics/Registration and authentication/Theory/task.html
+++ b/Topics/Registration and authentication/Theory/task.html
@@ -14,7 +14,7 @@
   <p></p> 
   <p>After you've made initial migrations you can create new accounts. Mostly, the clients of your service will create accounts by themselves, but let's see how you can create a <em>usual user</em> and a <em>superuser</em> in the database from the console.</p> 
   <p>Superuser is an admin account for your service. Being a superuser you can access and manipulate any data in the database. Usual users, by contrast, can manipulate only their own data.</p> 
-  <p>To use an initialized console client, run <code class="language-python">python manage.py shell</code> command.</p> 
+  <p>To use an initialized console client, run the <code class="language-python">python manage.py shell</code> command.</p> 
   <pre><code class="language-python">from django.contrib.auth.models import User
 
 
@@ -25,7 +25,7 @@ User.objects.create_superuser(
 User.objects.create_user(
    username='usual_user', email='user@example.com', password='NotSecRetAtAll'
 )</code></pre> 
-  <p>As you may have guessed, <code class="language-python">create_user</code> method creates a usual user and <code class="language-python">create_superuser</code> creates a superuser in your database. You're not likely to need the <code class="language-python">create_user</code> method often, but you will need a console method to make the first admin account.</p> 
+  <p>As you may have guessed, the <code class="language-python">create_user</code> method creates a usual user and <code class="language-python">create_superuser</code> creates a superuser in your database. You're not likely to need the <code class="language-python">create_user</code> method often, but you will need a console method to make the first admin account.</p> 
   <p></p>
   <div class="alert alert-primary">
    Another way to create a superuser is the 
@@ -40,7 +40,7 @@ User.objects.create_user(
     path('logout', LogoutView.as_view()),
     path('signup', MySignupView.as_view()),
 ]</code></pre> 
-  <p>Now we need to implement several classes and import them to the <em>urls.py</em> module. We start by making <code class="language-python">MySignupView</code> class.</p> 
+  <p>Now we need to implement several classes and import them to the <em>urls.py</em> module. We start by making the <code class="language-python">MySignupView</code> class.</p> 
   <h5>Signup</h5> 
   <p>You already know how you can create a new user with Python, but regular users don't know Python. We've got to provide a simple web interface for them with an HTML form. Fortunately, making it will only take us a few simple steps, and then our new users will just sign up on their own.</p> 
   <pre><code class="language-python">from django.contrib.auth.forms import UserCreationForm
@@ -51,7 +51,7 @@ class MySignupView(CreateView):
     form_class = UserCreationForm
     success_url = 'login'
     template_name = 'signup.html'</code></pre> 
-  <p>To be able to create objects with the HTTP handler, we inherit <code class="language-python">MySignupView</code> class from <code class="language-python">CreateView</code>. We define several attributes that will do the work for us:</p> 
+  <p>To be able to create objects with the HTTP handler, we inherit the <code class="language-python">MySignupView</code> class from <code class="language-python">CreateView</code>. We define several attributes that will do the work for us:</p> 
   <ul> 
    <li>The <code class="language-python">form_class</code> attribute is a Django form class. We select <code class="language-python">UserCreationForm</code> from the framework to create a new user.</li> 
    <li>After our users finished registration, they are redirected to the <code class="language-python">success_url</code> page of the service, in our case, to the login page.</li> 
@@ -90,7 +90,7 @@ class MyLoginView(LoginView):
   <p style="text-align: center;"><img alt="" src="https://ucarecdn.com/5b12f5ad-4adf-4c73-b4e1-22c7050b63c3/"></p> 
   <h5>Logout</h5> 
   <p>The last action our users need is logout. They do not need to send any information, so to log out they should just go to the right URL.</p> 
-  <p>You can see that for login and signup we define our custom <code class="language-python">MySignupView</code> and <code class="language-python">MyLoginView</code> classes accordingly. In <code class="language-python">urlpatterns</code> you can find that for logout we use <code class="language-python">LogoutView</code> class from <em>django.contrib.auth.views</em> module. Just import it to the <em>urls.py</em> module to complete the work.</p> 
+  <p>You can see that for login and signup we define our custom <code class="language-python">MySignupView</code> and <code class="language-python">MyLoginView</code> classes accordingly. In <code class="language-python">urlpatterns</code> you can find that for logout we use the <code class="language-python">LogoutView</code> class from <em>django.contrib.auth.views</em> module. Just import it to the <em>urls.py</em> module to complete the work.</p> 
   <p>If you want to specify where the user should be redirected after logging out, you can define this in the <em>settings.py</em> module. For example, to redirect users back to the login page, add this line to the module: <code class="language-python">LOGOUT_REDIRECT_URL = '/login'</code>.</p> 
   <p>Now you know enough to add authentication to any service, so you can get your hands on personalizing your web service for each individual user.</p>
  </body>
