ADDED: Problems solved during Stage 5 of the HyperJob Agency project. Created during my studies using JetBrains Academy.

--- a/Topics/Basic string methods/Theory/task.html
+++ b/Topics/Basic string methods/Theory/task.html
@@ -32,7 +32,7 @@ print(message.upper())  # BONJOUR AND WELCOME TO PARIS!
 print(message)  # bonjour and welcome to Paris!
 
 title_message = message.title() 
-# `title_message` contains a new string with all words capitalized
+# `title_message` contains a new string with the first character of each word capitalized
 print(title_message)  # Bonjour And Welcome To Paris!
 
 print(message.replace("Paris", "Lyon"))  # bonjour and welcome to Lyon!
