--- a/Topics/Sorting a list/Theory/task.html
+++ b/Topics/Sorting a list/Theory/task.html
@@ -59,7 +59,7 @@ print(sorted(numbers, key=my_sorted))  # [3.2, 4.3, 1.5]</code></pre>
 reversed_list = initial_list.reverse()
 print(reversed_list)  # None
 print(initial_list)   # [5, 4, 3, 2, 1]</code></pre> 
-  <p>The function <code class="language-python">reversed()</code> returns a reverse <em>iterator</em>, bypassing which you can get the elements of the input sequence in the reverse order. To get access to the reversed list, you can write the following:</p> 
+  <p>The function <code class="language-python">reversed()</code> returns a reverse <em>iterator</em>, bypassing which, you can get the elements of the input sequence in the reverse order. To get access to the reversed list, you can write the following:</p> 
   <pre><code class="language-python">numbers = [1, 2, 3, 4, 5]
 for number in reversed(numbers):
     print(number) 
